--- a/frontend/frontend/templates/core/albums.html
+++ b/frontend/frontend/templates/core/albums.html
@@ -3,36 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Music Albums Guide</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
 </head>
 <body>
-    <h1>Музыкальные альбомы</h1>
+    <table class="table">
+        <caption class="table__caption">Music Albums Guide</caption>
+        <tr class="table__header">
+            <th class="table__cell">album</th>
+            <th class="table__cell">
+                album<br>
+                <form method="post">
+                    {% csrf_token %}
+                    <button name="sort" value="album">SORT!</button>
+                </form></th>
+            <th class="table__cell">
+                artist<br>            
+                <form method="post">
+                    {% csrf_token %}
+                    <button name="sort" value="artist">SORT!</button>
+                </form></th>
+            <th class="table__cell">Track</th>
+        </tr>
+        {% for item in albums %}
+        <tr class="table__row">
+            <th class="table__cell">{{item.album}}</th>
+            <th class="table__cell">{{item.name}}</th>
+            <th class="table__cell">{{item.artist.name}}</th>
+            <th class="table__cell">
+                {% for track in item.tracks %}
+                    track<br>
+                {% endfor %}
+            </th>
+        </tr>
+        {% endfor %}
+    </table>
 </body>
-<table>
-    <tr>
-        <td>album<br>
-            <form method="post">
-                {% csrf_token %}
-                <button name="sort" value="album">SORT!</button>
-            </form>
-        </td>
-        <td>artist<br>            
-            <form method="post">
-                {% csrf_token %}
-                <button name="sort" value="artist">SORT!</button>
-            </form>
-        <td>tracks</td>
-    </tr>
-    {% for item in albums %}
-    <tr>
-       <td>{{item.name}}</td>
-       <td>{{item.artist.name}}</td>
-       <td>
-           {% for track in item.tracks %}
-           track<br>
-           {% endfor %}
-       </td>
-    </tr>
-    {% endfor %}
-</table>
 </html>
 
