--- a/frontend/frontend/templates/core/albums.html
+++ b/frontend/frontend/templates/core/albums.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Music Albums Guide</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     <table class="table">
